--- a/.github/workflows/sanity_checks.yml
+++ b/.github/workflows/sanity_checks.yml
@@ -152,3 +152,20 @@ jobs:
       - name: Sanity Checks
         run: |
           ./tools/sanity_checks.py
+
+  OpenBSD:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: vmactions/openbsd-vm@v1
+        with:
+          copyback: false
+          prepare: |
+            pkg_add cmake git ninja pkgconf py3-pip
+            python3 -m pip install --pre meson
+            git config --global --add safe.directory '*'
+          run: |
+            ./tools/sanity_checks.py
