--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -11,7 +11,7 @@ on:
     - cron: '0 0 * * 0'
 
 jobs:
-  Ubuntu:
+  MinGW64:
     if: github.event_name != 'schedule' || github.repository == 'mesonbuild/wrapdb'
     runs-on: ubuntu-latest
     env:
@@ -22,10 +22,39 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: egor-tensin/setup-mingw@v2
+        with:
+          platform: x64
+
       - name: Install packages
         run: |
           sudo apt-get update
-          sudo apt-get -y install build-essential python3-pip ninja-build
+          sudo apt-get -y install build-essential python3-pip ninja-build wine64
+          python3 -m pip install git+https://github.com/mesonbuild/meson
+
+      - name: Sanity Checks
+        run: |
+          ./tools/sanity_checks.py
+
+  MinGW32:
+    if: github.event_name != 'schedule' || github.repository == 'mesonbuild/wrapdb'
+    runs-on: ubuntu-latest
+    env:
+      TEST_BUILD_ALL: 1
+      TEST_FATAL_WARNINGS: ${{ github.event.inputs.fatal_warnings }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: egor-tensin/setup-mingw@v2
+        with:
+          platform: x86
+
+      - name: Install packages
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install build-essential python3-pip ninja-build wine
           python3 -m pip install git+https://github.com/mesonbuild/meson
 
       - name: Sanity Checks
