--- a/.github/workflows/sanity_checks.yml
+++ b/.github/workflows/sanity_checks.yml
@@ -31,10 +31,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # https://github.com/actions/runner-images/issues/5459#issuecomment-1532856844
-      - name: Remove bad Strawberry Perl patch binary in search path
-        run: del C:\Strawberry\c\bin\patch.EXE
-
       - name: Install packages
         run: |
           python -m pip install --pre meson
@@ -51,15 +47,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # https://github.com/actions/runner-images/issues/5459#issuecomment-1532856844
-      - name: Remove bad Strawberry Perl patch binary in search path
-        run: del C:\Strawberry\c\bin\patch.EXE
-
       - name: Install packages
         run: |
           python -m pip install --pre meson
 
-      - uses: ilammy/msvc-dev-cmd@v1
+      - uses: microsoft/setup-msbuild@v1
+        with:
+          msbuild-architecture: x86
       - name: Sanity Checks
         env:
           CC: clang-cl
