libpsl: test libidn2
Signed-off-by: Rosen Penev <rosenp@gmail.com>

--- a/ci_config.json
+++ b/ci_config.json
@@ -455,6 +455,14 @@
       "libpciaccess-dev"
     ]
   },
+  "libpsl": {
+    "build_options": [
+      "libpsl:runtime=libidn2"
+    ],
+    "msys_packages": [
+      "libidn2"
+    ]
+  },
   "libtirpc": {
     "_comment": "Linux only",
     "build_on": {
