--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -146,7 +146,7 @@ jobs:
 
   MacOS:
     if: github.event_name != 'schedule' || github.repository == 'mesonbuild/wrapdb'
-    runs-on: macos-latest
+    runs-on: macos-latest-xlarge
     env:
       TEST_BUILD_ALL: 1
       TEST_FATAL_WARNINGS: ${{ github.event.inputs.fatal_warnings }}
