--- a/releases.json
+++ b/releases.json
@@ -1800,6 +1800,14 @@
       "0.9.76-1"
     ]
   },
+  "libmpdclient": {
+    "dependency_names": [
+      "libmpdclient"
+    ],
+    "versions": [
+      "2.22-1"
+    ]
+  },
   "libnpupnp": {
     "dependency_names": [
       "libnpupnp"
